Update code smells and copyright